--- a/frontend/forms/src/components/styles/AdminView.css
+++ b/frontend/forms/src/components/styles/AdminView.css
@@ -13,6 +13,7 @@
     right: 20px;
     padding: 10px 20px;
     border: 1px solid #000;
+    border-radius: 10px;
     color: black;
     cursor: pointer;
 }
