--- a/frontend/forms/src/components/styles/AdminView.css
+++ b/frontend/forms/src/components/styles/AdminView.css
@@ -13,7 +13,7 @@
     right: 20px;
     padding: 10px 20px;
     border: 1px solid #000;
-    border-radius: 10px;
+    border-radius: 5px;
     color: black;
     cursor: pointer;
 }
@@ -24,4 +24,8 @@
 
 .admin-view .forms-container {
     margin-top: 60px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
