--- a/frontend/forms/src/index.css
+++ b/frontend/forms/src/index.css
@@ -16,14 +16,29 @@
 
 :root{
   font-family: 'InterVariable', 'Arial', sans-serif;
+  --primary-blue: #0D3996;
+  --dark-blue: #021135;
+  --white: #FFFFFF;
+  --gray: #D5D5D5;
+  --yellow: #FBB92A;
+  --orange: #F95125;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: transparent;
 }
 
 input {
   border-style: none;
+}
+
+.container {
+  width: 800px;
+  max-width: 800px;
+  min-height: 200px;
+  padding: 30px;
+  border-radius: 15px;
 }
