--- a/frontend/forms/src/components/CreateForm/CreateForm.css
+++ b/frontend/forms/src/components/CreateForm/CreateForm.css
@@ -3,27 +3,14 @@
   flex-direction: column;
   align-items: center;
   /* height: 100vh; */
-
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    gap: 80px;
-  }
-
 }
 
-
-.form-info {
-  background-color: var(--gray);
-  border-radius: 15px;
-  width: 800px;
-  height: 200px;
-  padding: 30px;
+.new-form {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  align-items: center;
+  padding: 20px;
+  gap: 80px;
 
   input {
     font-size: inherit;
@@ -43,6 +30,17 @@
     opacity: 0.5;
   }
 }
+
+.form-info {
+  background-color: var(--gray);
+  border-radius: 15px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+}
+
 
 .form-title {
   font-size: 36px;
@@ -118,9 +116,30 @@
   border: 2px solid var(--primary-blue);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 1fr;
-  gap: 0px 20px;
+  grid-template-rows: 80% 1fr;
+  gap: 10px 20px;
   grid-auto-flow: row;
+
+  button {
+    border: none;
+    border-radius: 15px;
+    transition: transform 0.3s ease;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+  }
+}
+
+.box-options {
+  grid-area: 2/1/3/3;
+  display: flex;
+  justify-content: end;
+
+  button {
+    width: 25%;
+  }
 }
 
 .field-data {
@@ -135,20 +154,6 @@
     font-weight: 700;
   }
 
-  input:focus {
-    outline: none;
-  }
-
-  input:focus::placeholder {
-    opacity: 0.5;
-  }
-
-  input::placeholder {
-    font-size: 24px;
-    opacity: 1;
-    color: #000;
-  }
-
   input:disabled {
     font-size: 20px;
     font-style: italic;
@@ -157,8 +162,13 @@
 
 }
 
+.multiple {
+  border-bottom: 1px solid var(--primary-blue);
+  font-size: 16px;
+}
+
 .field-config {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 0px 0px;
@@ -166,33 +176,44 @@
   grid-template-areas:
     "type-select"
     "config-options";
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 1 / 2 / 2 / 3; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .type-select {
-  grid-area: type-select;
+  /* grid-area: type-select; */
+  border-radius: 15px;
+  height: 50px;
 }
 
 .config-options {
-  border: 1px solid red;
-  grid-area: options;
-  align-self: end;
+  /* grid-area: options; */
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .field-options-container {
   display: flex;
   flex-direction: column;
+  padding: 5px;
   gap: 10px;
 }
 
 .field-option {
   display: flex;
+  justify-content: space-between;
   gap: 10px;
+
+  button {
+    width: 50%;
+  }
 }
 
+
 .add-option {
-  border-radius: 15px;
-  border: none;
   background-color: var(--primary-blue);
   color: var(--white);
   width: 50%;
@@ -200,34 +221,18 @@
   transition: transform 0.3s ease;
 }
 
-.add-option:hover {
-  transform: scale(1.05);
-  transition: transform 0.3s ease;
-}
-
-.delete-option {
-  border-radius: 15px;
-  border: none;
+.delete-button {
   color: red;
-  width: 50%;
   height: 30px;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.delete-option:hover {
+.delete-button:hover {
   background-color: red;
   color: var(--white);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.multiple {
-
-  font-size: 16px;
-  font-weight: 200;
-
-  border-bottom: 1px solid var(--primary-blue);
-
-}
 
 /* .main-section input{
   border-top: 0;
