--- a/frontend/forms/src/components/CreateForm/CreateForm.css
+++ b/frontend/forms/src/components/CreateForm/CreateForm.css
@@ -89,37 +89,11 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-
-/* .question-box{
-  border: 2px solid var(--primary-blue);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 20px;
-  grid-auto-flow: row;
-
-  .field-data {
-    grid-column: 1/2;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .field-config {
-    grid-column: 2/3;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-} */
-
 .question-box {
   border: 2px solid var(--primary-blue);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 80% 1fr;
-  gap: 10px 20px;
-  grid-auto-flow: row;
-
+  display: flex;
+  flex-direction: column;
+  
   button {
     border: none;
     border-radius: 15px;
@@ -132,27 +106,25 @@
   }
 }
 
-.box-options {
-  grid-area: 2/1/3/3;
+.question-box-header{
   display: flex;
-  justify-content: end;
-
-  button {
-    width: 25%;
-  }
-}
-
-.field-data {
-  grid-area: 1 / 1 / 2 / 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  gap: 10px;
+  justify-content: space-between;
+  height: 50px;
 
   #question-name {
     font-size: 24px;
     font-weight: 700;
+    border-bottom: 1px solid var(--primary-blue);
   }
+}
+
+.question-box-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  min-height: 50px;
+  gap: 10px;
 
   input:disabled {
     font-size: 20px;
@@ -160,67 +132,54 @@
     opacity: 0.5;
   }
 
-}
-
-.multiple {
-  border-bottom: 1px solid var(--primary-blue);
-  font-size: 16px;
-}
-
-.field-config {
-  /* display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "type-select"
-    "config-options";
-  grid-area: 1 / 2 / 2 / 3; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  div {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    font-size: 20px;
+  }
 }
 
 .type-select {
-  /* grid-area: type-select; */
+  border: 1px solid var(--primary-blue);
   border-radius: 15px;
+  width: 25%;
+  height: 100%;
+}
+
+.question-box-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   height: 50px;
 }
 
-.config-options {
-  /* grid-area: options; */
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-}
-
-.field-options-container {
+/* 
+.field-data {
+  grid-area: 1 / 1 / 2 / 2;
   display: flex;
   flex-direction: column;
-  padding: 5px;
-  gap: 10px;
-}
-
-.field-option {
-  display: flex;
-  justify-content: space-between;
   gap: 10px;
 
-  button {
-    width: 50%;
+  
+
+  input:disabled {
+    font-size: 20px;
+    font-style: italic;
+    opacity: 0.5;
+    height: 30px;
   }
-}
+
+} */
 
 
 .add-option {
   background-color: var(--primary-blue);
   color: var(--white);
-  width: 50%;
-  height: 30px;
-  transition: transform 0.3s ease;
+  font-size: 20px;
 }
 
+/*
 .delete-button {
   color: red;
   height: 30px;
@@ -231,7 +190,7 @@
   background-color: red;
   color: var(--white);
   transition: background-color 0.3s ease, color 0.3s ease;
-}
+} */
 
 
 /* .main-section input{
