--- a/frontend/forms/src/components/CreateForm/CreateForm.css
+++ b/frontend/forms/src/components/CreateForm/CreateForm.css
@@ -38,7 +38,6 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-
 }
 
 
@@ -115,6 +114,7 @@
     font-size: 24px;
     font-weight: 700;
     border-bottom: 1px solid var(--primary-blue);
+    width: 50%;
   }
 }
 
@@ -124,10 +124,15 @@
   justify-content: center;
   align-items: start;
   min-height: 50px;
+  font-size: 20px;
+  padding: 10px 0;
   gap: 10px;
 
+  > * {
+    height: 30px;
+  }
+
   input:disabled {
-    font-size: 20px;
     font-style: italic;
     opacity: 0.5;
   }
@@ -136,7 +141,8 @@
     display: flex;
     align-items: center;
     width: 50%;
-    font-size: 20px;
+    font-size: 16px;
+    border-bottom: 1px solid var(--gray);
   }
 }
 
@@ -154,37 +160,30 @@
   height: 50px;
 }
 
-/* 
-.field-data {
-  grid-area: 1 / 1 / 2 / 2;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-
-  
-
-  input:disabled {
-    font-size: 20px;
-    font-style: italic;
-    opacity: 0.5;
-    height: 30px;
-  }
-
-} */
-
 
 .add-option {
   background-color: var(--primary-blue);
   color: var(--white);
   font-size: 20px;
+  width: 200px;
 }
 
-/*
 .delete-button {
   color: red;
   height: 30px;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+.accept-button {
+  background-color: #0da025;
+  color: var(--white);
+  border: none;
+  border-radius: 15px;
+  font-size: 20px;
+  width: 200px;
+}
+/*
+
 
 .delete-button:hover {
   background-color: red;
