--- a/frontend/forms/src/components/AdminForm/AdminForm.css
+++ b/frontend/forms/src/components/AdminForm/AdminForm.css
@@ -1,28 +1,57 @@
-.forms {
-    border: 1px solid gray;
-    border-radius: 5px;
-    padding: 20px;
-    margin: 10px 0;
+.form{
     display: flex;
     justify-content: space-between;
-    width: 70%;
+
+    margin: 10px;
+    padding: 10px;
+    border: 2.5px solid var(--primary-blue);
+    border-radius: 10px;
+
+    width: 50%;
 }
 
-.forms h2 {
-    margin: 0 0 10px 0;
+.form:hover{
+    width: 60%;
+    font-size: larger;
 }
 
-.forms p {
-    margin: 5px 0;
-}
-
-.forms .buttons {
-    top: 20px;
-    right: 20px;
+.buttons{
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
 }
 
-.buttons button {
+.buttons button{
     margin: 5px;
+    padding: 5px;
+    border: 2px solid var(--primary-blue);
+    background-color: var(--primary-blue);
+    color: var(--white);
+    font-weight: bold;
+
+    border-radius: 5px;
+}
+
+.buttons button:hover{
+    cursor: pointer;
+    background-color: var(--white);
+    color: var(--primary-blue);
+    border-color: var(--primary-blue);
+
+}
+
+.form:hover .buttons button {
+    font-size: medium;
+}
+
+.form, .buttons button{
+    transition: border-color 0.4s, 
+                background-color 0.25s, 
+                font-weight 0.1s,
+                width 0.3s, 
+                font-size 0.3s;
+}
+
+.info{
+    padding: 10px;
 }
