--- a/frontend/forms/src/components/AdminView/AdminView.css
+++ b/frontend/forms/src/components/AdminView/AdminView.css
@@ -1,31 +1,68 @@
-.admin-view {
-    padding: 20px;
-    font-family: Arial, sans-serif;
-}
-
-.admin-view h1 {
-    text-align: center;
-}
-
-.admin-view .create-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    border: 1px solid #000;
-    border-radius: 5px;
-    color: black;
-    cursor: pointer;
-}
-.admin-view .create-button:hover {
-    background-color: gray;
-    color: #fff;
-}
-
-.admin-view .forms-container {
-    margin-top: 60px;
-    width: 100%;
+.admin-view{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-top: 50px;
+}
+
+.admin-header{
+    display: flex;
+    justify-content: space-between;
+
+    width: 90%;
+    margin-bottom: 20px;
+}
+
+.forms-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
+}
+
+.create-button{
+    margin: 5px;
+    padding: 5px;
+
+    border: 2px solid var(--yellow);
+    border-radius: 5px;
+    background-color: var(--yellow);
+
+    color: var(--white);
+    font-weight: bold;
+    font-size: medium;
+
+    transition: all 0.3s;
+}
+
+.create-button:hover{
+    cursor: pointer;
+    background-color: var(--dark-blue);
+    border-color: var(--dark-blue);
+}
+
+.forms-container-create{
+    width: 40%;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+
+    border: 2px solid var(--yellow);
+    border-radius: 10px;
+
+    font-size: large;
+    font-weight: bold;
+    color: var(--yellow);
+
+    transition: all 0.3s;
+}
+
+.forms-container-create:hover{
+    background-color: var(--yellow);
+    color: var(--white);
+    width: 50%;
+    font-size: x-large;
 }
