--- a/frontend/forms/src/components/AnswerForm/AnswerForm.css
+++ b/frontend/forms/src/components/AnswerForm/AnswerForm.css
@@ -6,7 +6,6 @@
     padding-top: 20px;
     padding-bottom: 20px;
     gap: 20px;
-    background-color: #f0f0f0;
 }
 
 .question-section{
@@ -27,6 +26,8 @@
     border-radius: 10px;
     padding: 10px;
     width: 30%;
+
+    box-shadow: 0 0 25px var(--gray);
 
     label[name='question-name']{
         font-size: large;
