[ADD] New UI for tabular results view and some minor UI fixes

--- a/frontend/forms/src/index.css
+++ b/frontend/forms/src/index.css
@@ -41,3 +41,9 @@ input {
   padding: 23px;
   border-radius: 15px;
 }
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
