--- a/frontend/forms/src/components/Results/Table/ResultTable.css
+++ b/frontend/forms/src/components/Results/Table/ResultTable.css
@@ -1,42 +1,67 @@
-:root {
-  font-family: 'Arial', sans-serif;
-}
-
-.main_container {
+.form-info{
+  background-color: var(--gray);
+  border-radius: 15px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 30px;
+
+  h1 {
+    font-size: 36px;
+  }
+
+  p {
+    font-size: 24px;
+    font-weight: 200;
+  }
+
+  a {
+    color: var(--primary-blue);
+    align-self: flex-end;
+  }
+
+}
+
+.results {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  padding: 20px;
+  gap: 20px;
 }
 
-.result_table {
+.result-container {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  padding: 20px;
+  gap: 20px;
+  width: 100%;
+  border: 1px solid var(--primary-blue);
+  border-radius: 15px;
+  box-shadow: 0px 5px 5px 0px rgba(13,57,150,0.3);
 }
 
-.result_table b{
-  margin-bottom: 5px;
+.result-header {
+  font-size: 32px;
+  font-weight: 500;
 }
+
 
 /* Estilos para la tabla */
 table {
   width: 100%;
-  border-collapse: collapse;
-  margin: 20px 0;
-  font-size: medium;
+  border-collapse: separate;
+  border-spacing: 0;
   text-align: left;
 }
 
 th, td {
   padding: 12px 15px;
-  border: 1px solid #ddd;
 }
 
 th {
-  background-color: #f4f4f4;
-  font-weight: bold;
+  background-color: var(--primary-blue);
+  color: var(--white);
 }
 
 tr:nth-child(even) {
@@ -45,4 +70,27 @@ tr:nth-child(even) {
 
 tr:hover {
   background-color: #f1f1f1;
+}
+
+table th, table td {
+  border: 1px solid var(--primary-blue);
+  border-top: none;
+}
+
+
+
+table th:first-child {
+  border-top-left-radius: 15px;
+}
+
+table th:last-child {
+  border-top-right-radius: 15px;
+}
+
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 15px;
+}
+  
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 15px;
 }
