--- a/frontend/forms/src/components/Results/Map/ResultMap.css
+++ b/frontend/forms/src/components/Results/Map/ResultMap.css
@@ -46,7 +46,7 @@
   .answers-container{
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
   }
 
   .results-container{
@@ -57,7 +57,7 @@
     width: 100%;
     border: 1px solid var(--primary-blue);
     border-radius: 15px;
-    box-shadow: 0px 5px 5px 0px rgba(13,57,150,0.3);
+    /*box-shadow: 0px 5px 5px 0px rgba(13,57,150,0.3);*/
 
     h3 {
         padding: 5px 10px;
@@ -65,8 +65,8 @@
         background-color: var(--primary-blue);
         font-weight: bold;
         font-size: 18px;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+        border-top-left-radius: 14px;
+        border-top-right-radius: 14px;
         /*border-radius: 15px;*/
     }
 
@@ -79,6 +79,11 @@
 
   .creation-date{
     font-size: 15px;
+  }
+
+  .popup{
+    border-radius: 15px;
+    border: 2px solid var(--primary-blue);
   }
 
 
