--- a/frontend/forms/src/components/Login/Login.css
+++ b/frontend/forms/src/components/Login/Login.css
@@ -79,3 +79,9 @@
     color: var(--white);
     border-color: var(--white);
 }
+
+@media screen and (max-width: 768px) {
+    .main-login form {
+        width: 90%;
+    }
+}
