--- a/frontend/forms/src/components/AdminForm/AdminForm.css
+++ b/frontend/forms/src/components/AdminForm/AdminForm.css
@@ -55,3 +55,17 @@
 .info{
     padding: 10px;
 }
+
+@media screen and (max-width: 768px) {
+    .form{
+        width: 90%;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .form{
+        width: 80%;
+    }
+}
