--- a/frontend/forms/src/components/AdminView/AdminView.css
+++ b/frontend/forms/src/components/AdminView/AdminView.css
@@ -66,3 +66,22 @@
     width: 50%;
     font-size: x-large;
 }
+
+@media screen and (max-width: 768px) {
+    .admin-view{
+        margin-top: 20px;
+    }
+
+    .admin-header{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form {
+        width: 80%;
+    }
+
+    .forms-container-create{
+        width: 80%;
+    }
+}
