--- a/frontend/forms/src/index.css
+++ b/frontend/forms/src/index.css
@@ -36,7 +36,7 @@ input {
 }
 
 .container {
-  width: 800px;
+  width: 45%;
   min-height: 200px;
   padding: 23px;
   border-radius: 15px;
@@ -46,4 +46,10 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 820px) {
+  .container {
+    width: 90%;
+  }
 }
