--- a/frontend/forms/src/components/Results/Table/ResultTable.css
+++ b/frontend/forms/src/components/Results/Table/ResultTable.css
@@ -28,6 +28,7 @@
   align-items: center;
   padding: 20px;
   gap: 20px;
+  width: 100%;
 }
 
 .result-container {
@@ -35,7 +36,7 @@
   flex-direction: column;
   padding: 20px;
   gap: 20px;
-  width: 100%;
+  width: 30%;
   border: 1px solid var(--primary-blue);
   border-radius: 15px;
   box-shadow: 0px 5px 5px 0px rgba(13,57,150,0.3);
@@ -93,4 +94,14 @@ table tr:last-child td:first-child {
   
 table tr:last-child td:last-child {
   border-bottom-right-radius: 15px;
+}
+
+@media screen and (max-width: 810px) {
+  .results {
+    width: 90%;
+  }
+
+  .result-container {
+    width: 90%;
+  }
 }
