--- a/frontend/forms/src/components/AdminForm/AdminForm.css
+++ b/frontend/forms/src/components/AdminForm/AdminForm.css
@@ -56,12 +56,34 @@
     padding: 10px;
 }
 
+.info-buttons{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.visibility-icon{
+    width: 40px;
+}
+
+.code{
+    color: var(--primary-blue);
+    font-weight: bold;
+}
+
 @media screen and (max-width: 768px) {
     .form{
         width: 90%;
         flex-direction: column;
         gap: 10px;
     }
+
+    .form:hover{
+        width: 90%;
+        font-size: medium;
+    }
+
+    
 }
 
 @media screen and (max-width: 820px) {
