--- a/frontend/forms/src/components/AdminView/AdminView.css
+++ b/frontend/forms/src/components/AdminView/AdminView.css
@@ -6,13 +6,6 @@
     margin-top: 50px;
 }
 
-.admin-header{
-    display: flex;
-    justify-content: space-between;
-
-    width: 90%;
-    margin-bottom: 20px;
-}
 
 .forms-container{
     display: flex;
@@ -50,12 +43,13 @@
     padding-bottom: 10px;
     cursor: pointer;
 
+    background-color: var(--yellow);
     border: 2px solid var(--yellow);
     border-radius: 10px;
 
     font-size: large;
     font-weight: bold;
-    color: var(--yellow);
+    color: var(--white);
 
     transition: all 0.3s;
 }
