--- a/frontend/forms/src/components/CodeSearch/CodeSearch.css
+++ b/frontend/forms/src/components/CodeSearch/CodeSearch.css
@@ -6,9 +6,9 @@
     height: 100vh;
 
     background-image: url('../../assets/onda-azul-transparente.png');
-    background-size: 500px; /* Ajusta el tamaño del patrón */
-    background-repeat: repeat; /* Repite la imagen para cubrir todo el contenedor */
-    background-position: top left; /* Posiciona la imagen en la esquina superior izquierda */
+    background-size: 500px; 
+    background-repeat: repeat; 
+    background-position: top left; 
 }
 
 .code-container{
