--- a/frontend/forms/src/components/LandingPage/LandingPage.css
+++ b/frontend/forms/src/components/LandingPage/LandingPage.css
@@ -68,7 +68,7 @@
     }
 }
 
-.search-button{
+.search-btn{
     margin-bottom: 30px;
     padding: 15px;
 
@@ -83,10 +83,10 @@
     transition: all 0.3s;
 }
 
-.search-button:hover{
+.search-btn:hover{
     cursor: pointer;
-    /* background-color: var(--dark-blue);
-    border-color: var(--dark-blue); */
+    background-color: var(--dark-blue);
+    border-color: var(--dark-blue); 
 }
 
 @media screen and (max-width: 820px){
