--- a/frontend/forms/src/components/Header/Header.css
+++ b/frontend/forms/src/components/Header/Header.css
@@ -1,49 +1,45 @@
-.header{
+.header {
     background-color: var(--white); 
     color: var(--dark-blue);
     padding: 15px 15px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between; 
     align-items: center;
     border-bottom: 2px solid var(--dark-blue);
+    flex-wrap: wrap; 
 }
 
-
-.header-logo{
+.header-logo {
     display: flex;
     align-items: flex-start;
 }
 
-.header-logo img{
+.header-logo img {
     width: 250px;
 }
 
-.header-tittle{
+.header-title {
     display: flex;
     flex: 1;
     justify-content: center;
     align-items: center;
+    text-align: center; 
 }
 
-.header-options{
-    justify-content: flex-end;
-   
+.header-options {
     display: flex; 
+    justify-content: flex-end;
     gap: 20px;
 }
 
 .button {
-    width: 100%;
     padding: 8px;
-
     border: 2px solid var(--primary-blue);
     border-radius: 15px;
     background-color: var(--primary-blue);
-
     color: var(--white);
     font-weight: bold;
     font-size: 16px;
-
     transition: all 0.3s;
 }
 
@@ -54,8 +50,9 @@
     border-color: var(--white);
 }
 
-.config-button{
-    width: 100%;
+.config-button {
+    width: 45px; 
+    height: 45px; 
     background-image: url('../../assets/adminIcon.png');
     background-repeat: no-repeat;
     background-position: center;
@@ -63,13 +60,40 @@
     border: 0;
 }
 
-.config-button:hover{
-    width: 100%;
+.config-button:hover {
     background-image: url('../../assets/adminIconHover.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 45px 45px;
-    border: 0;
 }
 
 
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column; 
+        align-items: center; 
+        font-size: 12px;
+    }
+
+    .header-logo img {
+        width: 200px; 
+    }
+
+    .header-title {
+        margin: 10px 0; 
+    }
+
+    .header-options {
+        justify-content: center; 
+        gap: 10px; 
+        margin-top: 10px;
+    }
+
+    .button {
+        width: 100%; 
+        font-size: 14px; 
+    }
+
+    .config-button {
+        width: 40px; 
+        height: 40px; 
+        background-size: 25px 25px; 
+    }
+}
