--- a/frontend/forms/src/components/Header/Header.css
+++ b/frontend/forms/src/components/Header/Header.css
@@ -50,6 +50,35 @@
     border-color: var(--white);
 }
 
+.home-button {
+    width: 45px; 
+    height: 45px; 
+    background-image: url('../../assets/homeIcon.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 45px 45px;
+    border: 0;
+}
+
+.home-button:hover {
+    background-image: url('../../assets/homeIconHover.png');
+}
+
+.find-button {
+    width: 45px; 
+    height: 45px; 
+    background-image: url('../../assets/findIcon.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 35px 35px;
+    border: 0;
+}
+
+.find-button:hover {
+    background-image: url('../../assets/findIconHover.png');
+}
+
+
 .config-button {
     width: 45px; 
     height: 45px; 
@@ -91,9 +120,5 @@
         font-size: 14px; 
     }
 
-    .config-button {
-        width: 40px; 
-        height: 40px; 
-        background-size: 25px 25px; 
-    }
+ 
 }
