UPDATE searchBox en landing page

--- a/frontend/forms/src/components/LandingPage/LandingPage.css
+++ b/frontend/forms/src/components/LandingPage/LandingPage.css
@@ -44,6 +44,10 @@
     padding-bottom: 50px;    
 }
 
+.search-box{
+    margin-bottom: 50px;
+}
+
 .about-section{
     display: flex;
     flex-direction: column;
