--- a/frontend/forms/src/components/Results/Table/ResultTable.css
+++ b/frontend/forms/src/components/Results/Table/ResultTable.css
@@ -35,11 +35,21 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  gap: 20px;
-  width: 30%;
+  gap: 30px;
   border: 1px solid var(--primary-blue);
   border-radius: 15px;
   box-shadow: 0px 5px 5px 0px rgba(13,57,150,0.3);
+
+  button {
+    border: none;
+    border-radius: 15px;
+    transition: transform 0.3s ease;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+  }
 }
 
 .result-header {
