[CHANGE] Updated Error Component and added click to copy support to form codes

--- a/frontend/forms/src/components/AdminForm/AdminForm.css
+++ b/frontend/forms/src/components/AdminForm/AdminForm.css
@@ -72,6 +72,18 @@
 .code{
     color: var(--primary-blue);
     font-weight: bold;
+    display: flex;
+    align-items: center;
+
+    gap: 5px;
+
+    button {
+        cursor: pointer;
+    }
+
+    button:hover{
+        scale: 1.1;
+    }
 }
 
 @media screen and (max-width: 768px) {
