--- a/frontend/forms/src/components/AdminView/AdminView.css
+++ b/frontend/forms/src/components/AdminView/AdminView.css
@@ -79,3 +79,23 @@
         width: 80%;
     }
 }
+
+.logout-button{
+    margin: 5px;
+    padding: 5px;
+
+    border: 2px solid red;
+    border-radius: 5px;
+    background-color: red;
+
+    color: var(--white);
+    font-weight: bold;
+    font-size: medium;
+
+    transition: all 0.3s;
+}
+
+.logout-button:hover{
+    cursor: pointer;
+    scale: 1.1;
+}
